<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_distanace_meter">Enter distanace(meter)</string>
    <string name="enter_time_second">Enter time(second)</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
    <string name="average_speed_km_h">Average Speed(km/h)</string>
    <string name="request_distance">Distance and time are required</string>
    <string name="time_must_be_greater_than_zero">Time must be greater than zero</string>
</resources>